# one-billion-row-challenge

one-billion-row-challenge-golang/: .gitignore  Makefile  go.mod  go.sum  hash_map.go  io.go  main.go  main_test.go  parse.go  types.go
one-billion-row-challenge-golang-memory/: .gitignore  Makefile  go.mod  go.sum  main.go  main_test.go  parse.go  types.go
one-billion-row-challenge-golang-memory/hans-XMG-EVO-M24/: cpu_run_6.prof  cpu_run_6.stat  cpu_run_6.txt  cpu_run_7.prof  cpu_run_7.stat  cpu_run_7.txt  cpu_run_8.prof  cpu_run_8.stat  cpu_run_8.txt  cpu_run_9.prof  cpu_run_9.stat  cpu_run_9.txt
one-billion-row-challenge-golang-parallel/: .gitignore  Makefile  go.mod  io.go  main.go  main_test.go  parse.go  types.go
one-billion-row-challenge-golang-parallel/hans-XMG-EVO-M24/: cpu_run_1.prof  cpu_run_1.stat  cpu_run_1.txt  cpu_run_10.prof  cpu_run_10.stat  cpu_run_10.txt  cpu_run_11.prof  cpu_run_11.stat  cpu_run_11.txt  cpu_run_12.prof  cpu_run_12.stat  cpu_run_12.txt  cpu_run_13.prof  cpu_run_13.stat  cpu_run_13.txt  cpu_run_14.prof  cpu_run_14.stat  cpu_run_14.txt  cpu_run_15.prof  cpu_run_15.stat  cpu_run_15.txt  cpu_run_16.prof  cpu_run_16.stat  cpu_run_16.txt  cpu_run_2.prof  cpu_run_2.stat  cpu_run_2.txt  cpu_run_3.prof  cpu_run_3.stat  cpu_run_3.txt  cpu_run_4.prof  cpu_run_4.stat  cpu_run_4.txt  cpu_run_5.prof  cpu_run_5.stat  cpu_run_5.txt  cpu_run_6.prof  cpu_run_6.stat  cpu_run_6.txt  cpu_run_7.prof  (+8 more)
one-billion-row-challenge-golang/hans-P63006/: cpu_run0_6.prof  (+83 more)
one-billion-row-challenge-viz/: Makefile  data.csv  main.py  parse.py  pyproject.toml
(+84 files in other folders)
