[project]
name = "one-billion-row-challenge-viz"
version = "0.1.0"
description = "Visualizations for one-billion row challenge post."
authors = [
    {name = "Hans Yu",email = "hans.yu@outlook.de"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[dependency-groups]
dev = [
    "poetry (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
